bom suggested changes

--- a/src/app/shared/dialogs/add-my-material/add-my-material.component.html
+++ b/src/app/shared/dialogs/add-my-material/add-my-material.component.html
@@ -12,98 +12,103 @@
     </div>
   </div>
   <mat-divider></mat-divider>
-  <form *ngIf="addMyMaterial" [formGroup]="addMyMaterial" (ngSubmit)="submit()" class="width-100">
-    <div formArrayName="myMaterial" *ngFor="let myMaterial of addMyMaterial.get('myMaterial')['controls']; let i = index">
-      <div class="row p-t-10" [formGroupName]="i">
-        <div class="col-xs-2">
-          <mat-form-field class="width-90 mat-form-field-padding" style="padding-top: 3px;">
-            <mat-label>*Material Name</mat-label>
-            <textarea matInput formControlName="materialName" class="text-area-border"></textarea>
-          </mat-form-field>
-          <!-- <mat-error *ngIf="myMaterial.controls['email'].hasError('required') && myMaterial.controls['email'].touched">
-            Email is required
-          </mat-error> -->
-          <!-- myMaterial.controls.myMaterial.controls.email.errors -->
-        </div>
-        <div class="col-xs-1 text-right p-l-0">
-          <mat-form-field
-            class="border-select width-90 mat-form-field-infix-padding mat-select-placeholder-padding mat-form-field-flex-padding mat-form-field-padding"
-            style="padding-top: 6px;"
-          >
-            <mat-select placeholder="*Unit" formControlName="materialUnit">
-              <mat-option *ngFor="let unit of materialUnit" [value]="unit">
-                <span>
-                  {{ unit }}
-                </span>
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-        <div class="col-xs-2 text-center">
-          <span>
-            <mat-form-field class="border-input width-90">
-              <input formControlName="estimatedQty" appTwoDigitDecimaNumber matInput type="text" placeholder="*Quantity" />
-            </mat-form-field>
-          </span>
-        </div>
-        <div class="col-xs-2 text-center">
-          <span>
-            <mat-form-field class="border-input width-90">
-              <input formControlName="estimatedPrice" appTwoDigitDecimaNumber matInput type="text" placeholder="Unit Rate(₹)" />
-            </mat-form-field>
-          </span>
-        </div>
-        <div class="col-xs-2">
-          <mat-form-field
-            class="border-select width-90 mat-form-field-flex-padding mat-form-field-padding mat-form-field-infix-padding mat-select-placeholder-padding"
-            style="padding-top: 6px;"
-          >
-            <mat-label>Trade</mat-label>
-            <mat-select formControlName="trade">
-              <mat-option *ngFor="let trade of tradesList" [value]="trade">
-                {{ trade.tradeName }}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-        <div class="col-xs-2">
-          <mat-form-field class="border-input width-90">
-            <input type="text" placeholder="Category" matInput formControlName="category" [matAutocomplete]="auto" />
-            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn" class="mat-option-alignment">
-              <mat-option *ngFor="let option of this.filterOptions | async" [value]="option">
-                {{ option.categoriesName }}
-              </mat-option>
-            </mat-autocomplete>
-          </mat-form-field>
-        </div>
-        <div class="col-xs-1 text-center p-t-15">
-          <div class="p-t-10">
-            <span *ngIf="addMyMaterial.get('myMaterial').value.length > 1" class="p-r-5">
-              <a class="width-15-px cursor-pointer float-right-invite-delBtn" matTooltip="Delete" (click)="onDelete(i)">
-                <!-- <img src="../../../../assets/images/delete-button.png" /> -->
-                <span class="material-icons main-color">
-                  delete_outline
-                </span>
-              </a>
-            </span>
-            <span *ngIf="i == addMyMaterial.get('myMaterial').value.length - 1">
-              <button
-                type="button"
-                [disabled]="!addMyMaterial.valid"
-                (click)="onAddRow()"
-                class="p-t-5 material-icons cursor button-background"
-                [ngClass]="[!addMyMaterial.valid ? 'main-color-faded' : 'main-color']"
+  <div class="container">
+    <form *ngIf="addMyMaterial" [formGroup]="addMyMaterial" (ngSubmit)="submit()">
+      <div class="row my-material-dialog-length">
+        <div formArrayName="myMaterial" *ngFor="let myMaterial of addMyMaterial.get('myMaterial')['controls']; let i = index">
+          <div class="row p-t-10" [formGroupName]="i">
+            <div class="col-xs-2">
+              <mat-form-field class="width-90 mat-form-field-padding" style="padding-top: 3px;">
+                <mat-label>*Material Name</mat-label>
+                <textarea matInput formControlName="materialName" class="text-area-border"></textarea>
+              </mat-form-field>
+              <!-- <mat-error *ngIf="myMaterial.controls['email'].hasError('required') && myMaterial.controls['email'].touched">
+                  Email is required
+                </mat-error> -->
+              <!-- myMaterial.controls.myMaterial.controls.email.errors -->
+            </div>
+            <div class="col-xs-1 text-right p-l-0">
+              <mat-form-field
+                class="border-select width-90 mat-form-field-infix-padding mat-select-placeholder-padding mat-form-field-flex-padding mat-form-field-padding"
+                style="padding-top: 6px;"
               >
-                add_circle
-              </button>
-            </span>
+                <mat-select placeholder="*Unit" formControlName="materialUnit">
+                  <mat-option *ngFor="let unit of materialUnit" [value]="unit">
+                    <span>
+                      {{ unit }}
+                    </span>
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+            <div class="col-xs-2 text-center">
+              <span>
+                <mat-form-field class="border-input width-90">
+                  <input formControlName="estimatedQty" appTwoDigitDecimaNumber matInput type="text" placeholder="*Quantity" />
+                </mat-form-field>
+              </span>
+            </div>
+            <div class="col-xs-2 text-center">
+              <span>
+                <mat-form-field class="border-input width-90">
+                  <input formControlName="estimatedPrice" appTwoDigitDecimaNumber matInput type="text" placeholder="Unit Rate(₹)" />
+                </mat-form-field>
+              </span>
+            </div>
+            <div class="col-xs-2">
+              <mat-form-field
+                class="border-select width-90 mat-form-field-flex-padding mat-form-field-padding mat-form-field-infix-padding mat-select-placeholder-padding"
+                style="padding-top: 6px;"
+              >
+                <mat-label>Trade</mat-label>
+                <mat-select formControlName="trade">
+                  <mat-option *ngFor="let trade of tradesList" [value]="trade">
+                    {{ trade.tradeName }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+            <div class="col-xs-2">
+              <mat-form-field class="border-input width-90">
+                <input type="text" placeholder="Category" matInput formControlName="category" [matAutocomplete]="auto" />
+                <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn" class="mat-option-alignment">
+                  <mat-option *ngFor="let option of this.filterOptions | async" [value]="option">
+                    {{ option.categoriesName }}
+                  </mat-option>
+                </mat-autocomplete>
+              </mat-form-field>
+            </div>
+            <div class="col-xs-1 text-center p-t-15">
+              <div class="p-t-10">
+                <span *ngIf="addMyMaterial.get('myMaterial').value.length > 1" class="p-r-5">
+                  <a class="width-15-px cursor-pointer float-right-invite-delBtn" matTooltip="Delete" (click)="onDelete(i)">
+                    <!-- <img src="../../../../assets/images/delete-button.png" /> -->
+                    <span class="material-icons main-color">
+                      delete_outline
+                    </span>
+                  </a>
+                </span>
+                <span *ngIf="i == addMyMaterial.get('myMaterial').value.length - 1">
+                  <button
+                    type="button"
+                    [disabled]="!addMyMaterial.valid"
+                    (click)="onAddRow()"
+                    class="p-t-5 material-icons cursor button-background"
+                    [ngClass]="[!addMyMaterial.valid ? 'main-color-faded' : 'main-color']"
+                  >
+                    add_circle
+                  </button>
+                </span>
+              </div>
+            </div>
           </div>
+          <hr *ngIf="i < addMyMaterial.get('myMaterial').value.length - 1" />
         </div>
       </div>
-      <hr *ngIf="i < addMyMaterial.get('myMaterial').value.length - 1" />
-    </div>
-    <div class="text-right col-xs-12 mt-4">
-      <button class="btn btn-warning next-btn" [disabled]="!addMyMaterial.valid">Send For Approval</button>
-    </div>
-  </form>
+
+      <div class="text-right col-xs-12 mt-4">
+        <button class="btn btn-warning next-btn" [disabled]="!addMyMaterial.valid">Send For Approval</button>
+      </div>
+    </form>
+  </div>
 </div>
