--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -26,6 +26,7 @@
 @import "./pages/select-project.scss";
 @import "./pages/walkthrough.scss";
 @import "./pages/common.scss";
+@import "./pages/add-mymaterial.scss";
 
 ::ng-deep .mat-horizontal-stepper-header {
   pointer-events: none !important;
