--- a/src/assets/scss/pages/bom-preview.scss
+++ b/src/assets/scss/pages/bom-preview.scss
@@ -42,3 +42,9 @@ input[type=file]::-webkit-file-upload-button {
   cursor: pointer;
   color: transparent;
 }
+
+.mat-form-field-unit-padding {
+  .mat-form-field-appearance-legacy .mat-form-field-wrapper {
+    padding-top: 8px !important;
+  }
+}
