--- a/src/app/features/bom/bom-topMaterial/bom-topMaterial.component.html
+++ b/src/app/features/bom/bom-topMaterial/bom-topMaterial.component.html
@@ -39,7 +39,7 @@
                       </span>
                     </div>
                     <div class="col-xs-2 text-right">
-                      <mat-form-field class="border-select shortWidth">
+                      <mat-form-field class="border-select shortWidth mat-form-field-flex-top-padding">
                         <mat-select formControlName="materialUnit" placeholder="Unit">
                           <mat-option *ngFor="let unit of materialUnit" [value]="unit">
                             <span>
