--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -52,3 +52,10 @@
     line-height: normal !important;
   }
 }
+
+.mat-form-field-flex-top-padding {
+  .mat-form-field-wrapper .mat-form-field-flex {
+    padding-top: 0px !important;
+    padding-bottom: 3px !important;
+  }
+}
