--- a/src/app/features/auth/signup/signup.component.html
+++ b/src/app/features/auth/signup/signup.component.html
@@ -5,8 +5,8 @@
                 <mat-form-field class="col-xs-12 border-input">
                     <input matInput formControlName="lastName" type="text" placeholder="Last Name" />
                 </mat-form-field> -->
-
-  <div class="phone-number">
+<div style="min-height: 311px;">
+     <div class="phone-number">
     <mat-form-field class="col-xs-12 border-input display-flex">
       <input
         matInput
@@ -93,6 +93,5 @@
       Sign Up
     </button>
   </div>
-  
-
+</div>
 </form>
