--- a/src/app/features/global-store/global-store.component.html
+++ b/src/app/features/global-store/global-store.component.html
@@ -6,8 +6,8 @@
           <img src="../../../assets/images/global-store.png" alt="BuildSupply_Logo" />
           <div>
             <p>
-              You haven't created any project yet. <br />
-              Please create one to continue.
+              You haven't added materials in any project <br />
+              Please add materials to continue.
             </p>
           </div>
           <!-- <button  mat-raised-button  (click)="addUser()" class="main-background-color main-button color-white">
