--- a/src/assets/scss/pages/po.component.scss
+++ b/src/assets/scss/pages/po.component.scss
@@ -152,3 +152,64 @@ s .validTill {
     max-width: 150px;
   }
 }
+
+
+.add-grn-container {
+  width: 100%;
+  min-width: 0px;
+  overflow-x: auto;
+
+.mat-table {
+      overflow-x: scroll;
+    }
+
+.mat-cell,
+.mat-header-cell {
+    word-wrap: initial;
+    display: table-cell;
+    padding: 0px 10px;
+    line-break: unset;
+    width: 2%;
+    white-space: nowrap;
+    overflow: hidden;
+    vertical-align: middle;
+    font-weight: 500;
+}
+.mat-row,
+.mat-header-row {
+    display: table-row;
+}
+.grn-material-name{
+  text-align: left;
+}
+}
+
+
+.example-container {
+  width: 100%;
+  min-width: 0px;
+  overflow-x: auto;
+
+.mat-table {
+      overflow-x: scroll;
+    }
+
+.mat-cell,
+.mat-header-cell {
+    word-wrap: initial;
+    display: table-cell;
+    padding: 0px 10px;
+    line-break: unset;
+    width: 2%;
+    white-space: nowrap;
+    overflow: hidden;
+    vertical-align: middle;
+    font-weight: 500;
+}
+.mat-row,
+.mat-header-row {
+    display: table-row;
+}
+
+}
+
