--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -20,27 +20,26 @@
       </div>
     </div>
   </div>
-  <div class="p-l-20 p-r-20 p-b-20 min-height parent" *ngIf="poApprovalDetailsTemp || poDraftedDetailsTemp || acceptedRejectedPOListTemp">
+  <div class="p-b-20 min-height parent create-po-dashboard" *ngIf="poApprovalDetailsTemp || poDraftedDetailsTemp || acceptedRejectedPOListTemp">
     <div class="row">
-      <div class="col-xs-3">
-        <mat-form-field class="example-form-field border-input p-l-20">
-          <input matInput placeholder="Search PO" type="search" (keyup)="applyFilter($event.target.value)" />
+
+       <div class="col-xs-7">
+        <mat-form-field class="example-form-field border-input project p-l-10">
+           <input matInput placeholder="Search PO" type="search" (keyup)="applyFilter($event.target.value)" />
           <button mat-button matSuffix mat-icon-button>
             <mat-icon>search</mat-icon>
           </button>
         </mat-form-field>
       </div>
-      <div class="col-xs-9">
-        <div class="text-right add-user-details-button-right p-t-10 p-r-20">
-          <button
+      <div class="text-right col-xs-5 create-po-btn p-r-20">
+        <button
             mat-raised-button
-            class="main-background-color main-button color-white m-b-5 create-po-btn"
+            class="main-background-color main-button color-white demo-title"
             [routerLink]="['../../po/initiate-po']"
             matTooltip="Issue P.O. to supplier without Request For Quotations"
           >
             Create P.O.
           </button>
-        </div>
       </div>
     </div>
 
@@ -134,8 +133,9 @@
                 P.O. For Approval
               </mat-panel-title>
             </mat-expansion-panel-header>
-            <div class="row matCellAlignLeft">
-              <table mat-table [dataSource]="poApprovalDetails" class="mat-elevation-z8 col-sm-12 po-custom-mat-width">
+
+            <div class="example-container mat-elevation-z8">
+              <table mat-table [dataSource]="poApprovalDetails">
                 <ng-container matColumnDef="PO Number">
                   <th mat-header-cell class="text-align-center" *matHeaderCellDef>PO Number</th>
                   <td mat-cell class="text-align-center" *matCellDef="let element">{{ element.poNumber }}</td>
@@ -169,22 +169,9 @@
                   </td>
                 </ng-container>
 
-                <!-- <ng-container matColumnDef="Action">
-                  <th mat-header-cell class="text-align-right" *matHeaderCellDef></th>
-                  <td mat-cell class="text-align-center" *matCellDef="let element">
-                    <span class="p-r-10"
-                      ><a href="javascript:void(0)" style="color: #f47721" [routerLink]="['../../po/po-generate/', element.purchaseOrderId, 'edit']">Review Draft P.O.</a></span
-                    >
-                    <span>&nbsp;</span>
-                    <span class="p-r-10 float-right cursor-pointer"
-                      ><a (click)="deleteDraftedPo(element)" matTooltip="Delete"> <img src="../../../../assets/images/delete-button.png" /> </a
-                    ></span>
-                  </td>
-                </ng-container> -->
-
                 <ng-container matColumnDef="Action">
-                  <th mat-header-cell style="width: 321px" class="text-align-center" class="text-align-right" *matHeaderCellDef></th>
-                  <td mat-cell class="text-align-center" *matCellDef="let element">
+                  <th mat-header-cell class="text-align-center" *matHeaderCellDef></th>
+                  <td mat-cell class="text-align-center actions-cell" *matCellDef="let element">
                     <span class="p-r-10">
                       <a href="javascript:void(0)" style="color: #f47721" [routerLink]="['../../po/po-generate/', element.purchaseOrderId, 'requiredApproval']">View P.O</a>
                     </span>
@@ -210,8 +197,8 @@
                 Drafted P.O.
               </mat-panel-title>
             </mat-expansion-panel-header>
-            <div class="row matCellAlignLeft">
-              <table mat-table [dataSource]="poDraftedDetails" class="mat-elevation-z8 col-sm-12 po-custom-mat-width">
+            <div class="example-container mat-elevation-z8">
+              <table mat-table [dataSource]="poDraftedDetails">
                 <ng-container matColumnDef="PO Number">
                   <th mat-header-cell class="text-align-center" *matHeaderCellDef>PO Number</th>
                   <td mat-cell class="text-align-center" *matCellDef="let element">{{ element.poNumber }}</td>
@@ -247,7 +234,7 @@
 
                 <ng-container matColumnDef="Action">
                   <th mat-header-cell class="text-align-right" *matHeaderCellDef></th>
-                  <td mat-cell class="text-align-center" *matCellDef="let element">
+                  <td mat-cell class="text-align-center" *matCellDef="let element" class="actions-cell">
                     <span class="p-r-10"
                       ><a href="javascript:void(0)" style="color: #f47721" [routerLink]="['../../po/po-generate/', element.purchaseOrderId, 'edit']">Review Draft P.O.</a></span
                     >
@@ -272,16 +259,16 @@
           <mat-expansion-panel class="myPanel" [expanded]="true">
             <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'">
               <mat-panel-title>
-                <div class="col-xs-6 text-left">
+                <div class="col-xs-5 text-left approved">
                   Approved P.O.
                 </div>
-                <div class="col-xs-6 text-right">
+                <div class="col-xs-7 text-right grn-note">
                   *GRN = Goods Receive Note
                 </div>
               </mat-panel-title>
             </mat-expansion-panel-header>
-            <div class="row matCellAlignLeft">
-              <table mat-table [dataSource]="acceptedRejectedPOList" class="mat-elevation-z8 col-sm-12 po-custom-mat-width">
+            <div class="example-container mat-elevation-z8">
+              <table mat-table [dataSource]="acceptedRejectedPOList">
                 <ng-container matColumnDef="PO Number">
                   <th mat-header-cell class="text-align-center" *matHeaderCellDef>PO Number</th>
                   <td mat-cell class="text-align-center" *matCellDef="let element">{{ element.poNumber }}</td>
@@ -317,7 +304,7 @@
 
                 <ng-container matColumnDef="Action">
                   <th mat-header-cell class="text-align-right" *matHeaderCellDef></th>
-                  <td mat-cell *matCellDef="let element">
+                  <td mat-cell *matCellDef="let element" class="actions-cell">
                     <span class="p-r-10"
                       ><a href="javascript:void(0)" style="color: #f47721" [routerLink]="['../../po/po-generate/', element.purchaseOrderId, 'view']">View P.O.</a></span
                     >
