--- a/src/app/shared/layout/main-layout/main-layout.component.html
+++ b/src/app/shared/layout/main-layout/main-layout.component.html
@@ -3,7 +3,7 @@
      
      <div class="side-navbar-header">
         <img class="img-circle" height="36" width="38" [src]="url || '../../../../assets/images/logo-profile-header.png'" alt="Test" />
-        <span class="user-name" (click)="goToProfile()">
+        <span class="user-name" (click)="goToProfile(sidenav)">
           {{userName}}
         </span>
 
