--- a/src/app/features/my-material/my-material.component.html
+++ b/src/app/features/my-material/my-material.component.html
@@ -2,92 +2,32 @@
   <div class="p-l-20 p-r-20 p-b-20 min-height">
     <div class="p-t-10">
       <mat-card class="parent">
-        <form [formGroup]="form">
-          <div class="row">
-            <div class="col-xs-3 text -left border-input">
-              <mat-form-field class="input-search-padding-zero">
-                <input #text matInput placeholder="Search Material" type="search" (input)="searchMaterial(text.value)" />
-                <button mat-button matSuffix mat-icon-button>
-                  <mat-icon>search</mat-icon>
-                </button>
-              </mat-form-field>
-            </div>
-            <div class="col-xs-3 text-right">
-              <mat-form-field class="border-select p-t-0">
-                <mat-label *ngIf="!formArray.length">Select Trades</mat-label>
-                <mat-select formControlName="selectedTrades" multiple>
-                  <div class="display-flex">
-                    <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Trade" [(ngModel)]="searchTrade" [ngModelOptions]="{standalone: true}" />
-                    <button mat-button matSuffix mat-icon-button>
-                      <mat-icon>search</mat-icon>
-                    </button>
-                  </div>
-                  <mat-select-trigger>
-                    <mat-label>Select Trades</mat-label>
-                  </mat-select-trigger>
-                  <mat-option *ngFor="let trade of tradesList | SearchPipe: searchTrade:'tradeName'" [value]="trade" selected="trade.isAttatched" (click)="choosenTrade()"
-                    >{{ trade.tradeName }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-              <p>Please select categories to add materials in Bill of Materials</p>
-            </div>
-            <div class="col-xs-6 text-right d-flex justify-content-end" appDnd>
-              <div class="mr-3">
-                <span class="cursor-pointer download-bom-template">
-                  <img src="assets/images/download.png" alt="download" class="img-fluid mr-2" />
-                  <a (click)="downloadExcel('assets/images/BOM_Template.xlsx')"> Download BOM Template</a></span
-                >
-              </div>
-              <div class="mr-3 cursor-pointer">
-                <input
-                  type="file"
-                  accept=".xlsx"
-                  #fileDropRef
-                  id="fileDropRef"
-                  class="fileupload cursor-pointer"
-                  style="display: none;"
-                  multiple
-                  (change)="uploadExcel($event.target.files)"
-                />
-                <label for="fileDropRef" class="cursor-pointer upload-template">
-                  <img src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30 cursor-pointer" /> Upload BOM Template</label
-                >
-              </div>
-              <div>
-                <button
-                  mat-raised-button
-                  class="main-background-color main-button color-white pull-right save-material-button"
-                  (click)="saveCategory()"
-                  [disabled]="
-                    this.currentIndex === 0 ? (this.topMaterial ? this.topMaterial.quantityForms.invalid : true) : this.allMaterial ? this.allMaterial.quantityForms.invalid : true
-                  "
-                >
-                  Add to BOM
-                </button>
-              </div>
-            </div>
-          </div>
-        </form>
         <div class="row">
-          <div class="col-xs-10 display-flex m-t-20">
+          <div class="col-xs-6 text -left border-input">
+            <mat-form-field class="input-search-padding-zero">
+              <input #text matInput placeholder="Search Material" type="search" (input)="searchMaterial(text.value)" />
+              <button mat-button matSuffix mat-icon-button>
+                <mat-icon>search</mat-icon>
+              </button>
+            </mat-form-field>
+          </div>
+          <div class="col-xs-6 text-right">
+            <button mat-raised-button class="main-color main-background-color main-button color-white" (click)="openAddMaterial()">+Add Material</button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 display-flex m-t-20">
             <div class="m-b-10 m-r-10" *ngFor="let trades of tradeNames">
               <mat-card class="p-l-10 p-r-10 p-t-5 p-b-5 font-size14 background-color-skyblue color-white">{{ trades }} </mat-card>
             </div>
           </div>
-          <div class="col-xs-2">
-            <a href="javascript:void(0)" class="main-color" (click)="openAddMyMaterial()">+ Add Custom Material</a>
-          </div>
         </div>
 
-        <div *ngIf="showTable">
-          <mat-tab-group (selectedTabChange)="tabClick($event)">
-            <mat-tab label="Top Materials"> <app-my-material-tab></app-my-material-tab></mat-tab>
-            <mat-tab label="All Materials"><app-unapproved-material-tab></app-unapproved-material-tab></mat-tab>
-          </mat-tab-group>
-        </div>
+        <mat-tab-group (selectedTabChange)="tabClick($event)">
+          <mat-tab label="Top Materials"> <app-my-material-tab *ngIf="showMyMaterial"></app-my-material-tab></mat-tab>
+          <mat-tab label="All Materials"><app-unapproved-material-tab *ngIf="showUnapprovedMaterial"></app-unapproved-material-tab></mat-tab>
+        </mat-tab-group>
       </mat-card>
     </div>
   </div>
 </div>
--->
